--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 resolvers-package=resolvers.impl
 DB_URL=jdbc:postgresql://83.147.246.87:5432/postgres
+DB_USERNAME=pavelioleg_user
+DB_PASSWORD=12345
